Fix text alignment of buttons

--- a/frontend/src/sections/Partners.scss
+++ b/frontend/src/sections/Partners.scss
@@ -48,6 +48,7 @@
   font-weight: bold;
   transition: background-color 0.3s ease;
   font-size: 10pt;
+  text-align: center;
 
   &:hover {
     background-color: #fff;
